--- a/public/main.css
+++ b/public/main.css
@@ -9,12 +9,13 @@ html {
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
-  background-image: linear-gradient(#c1272d, #000000);
+  
 }
 
 /* Grid */
 
 #app {
+  background-image: linear-gradient(#c1272d, #000000);
   height: 100%;
   display: grid;
   font-size: 16px;
@@ -61,6 +62,10 @@ footer {
 
 .home .vue2leaflet-map {
   height: 500px;
+}
+
+button {
+  border: none
 }
 
 /* END Map */
